--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "api-dylux": "^1.6.2",
     "aptoide-scraper": "^1.0.1",
     "awesome-phonenumber": "^2.68.0",
-    "axios": "^1.1.3",
+    "axios": "^1.7.4",
     "body-parser": "^1.20.2",
     "cfonts": "^2.10.0",
     "chalk": "^5.0.0",
@@ -52,6 +52,7 @@
     "cheerio": "1.0.0-rc.12",
     "colors": "1.4.0",
     "d3-node": "^3.0.0",
+    "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.17.3",
     "file-type": "^17.1.1",
@@ -91,6 +92,7 @@
     "similarity": "^1.2.1",
     "simple-git": "^3.24.0",
     "socket.io": "^4.4.1",
+    "stripe": "^16.7.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
     "url-regex-safe": "^3.0.0",
