--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "node-id3": "^0.2.6",
     "node-shazam": "*",
     "node-webpmux": "^3.1.1",
+    "nodemailer": "^6.9.14",
     "openai": "^3.3.0",
     "pdfkit": "^0.13.0",
     "perf_hooks": "^0.0.1",
