--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ pluginpilot
 plugins/supersecretlistener.js
 src/glx/db/database.json
 datasecret
+src/licenca/emailAtivos.json
+src/licenca/.gitkeep 
+
+src/tmplicense/*
+src/tmplicense/.gitkeep
+
 
 #| Files |#
 
